# storage/api-docs/api-docs.json
@@ -524,7 +524,7 @@
                 ]
             }
         },
-        "/client/send-otp": {
+        "/compte/send-otp": {
             "post": {
                 "tags": [
                     "Authentification Client"
@@ -615,7 +615,7 @@
                 }
             }
         },
-        "/client/login": {
+        "/compte/login": {
             "post": {
                 "tags": [
                     "Client"
@@ -687,7 +687,7 @@
                 }
             }
         },
-        "/client/verify-otp": {
+        "/compte/verify-otp": {
             "post": {
                 "tags": [
                     "Client"
@@ -772,7 +772,7 @@
                 }
             }
         },
-        "/client/compte": {
+        "/compte/me": {
             "get": {
                 "tags": [
                     "Client"
@@ -915,7 +915,7 @@
                 ]
             }
         },
-        "/client/{numero}/solde": {
+        "/compte/{numero}/solde": {
             "get": {
                 "tags": [
                     "Client"
@@ -1016,7 +1016,7 @@
                 ]
             }
         },
-        "/client/logout": {
+        "/compte/logout": {
             "post": {
                 "tags": [
                     "Authentification Client"
@@ -1063,7 +1063,7 @@
                 ]
             }
         },
-        "/client/transactions": {
+        "/compte/transactions": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -1158,7 +1158,7 @@
                 ]
             }
         },
-        "/client/transactions/payment": {
+        "/compte/transactions/payment": {
             "post": {
                 "tags": [
                     "Transactions"
@@ -1302,7 +1302,7 @@
                 ]
             }
         },
-        "/client/transactions/transfert": {
+        "/compte/transactions/transfert": {
             "post": {
                 "tags": [
                     "Transactions"
